--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
     "@types/crypto-js": "^4.2.2",
+    "@types/jsonwebtoken": "^9.0.9",
     "axios": "^1.9.0",
+    "cookie": "^1.0.2",
     "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
+    "jose": "^6.0.11",
+    "jsonwebtoken": "^9.0.2",
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
